Removed wrong and superfluous sudo command https://github.com/SUSE/spacewalk/issues/16622 https://github.com/uyuni-project/uyuni-docs/issues/1344

--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -178,11 +178,7 @@ Regular database backups do not require any downtime.
   This becomes a permanent target for your backup, so ensure it remains accessible by your server at all times.
 . In your backup location, create a directory for the backup:
 +
-----
-sudo -u postgres mkdir /var/spacewalk/db-backup
-----
-+
-Or, as root:
+As root:
 +
 ----
 install -d -o postgres -g postgres -m 700 /var/spacewalk/db-backup
