--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -80,6 +80,12 @@ Salt ([package]``salt-minion``)::
 * [path]``/etc/salt/minion.d/NAME.conf``
 * systemd service file: [path]``salt-minion.service``
 
+// FIXME: change wording of NOTE
+[NOTE]
+====
+the "salt-minion" package must come from the client tools channels or from an official SUSE distro.
+====
+
 .Procedure: Registering Clients with Salt Minion Configuration File
 . On the Salt client, open the [literal]``minion`` configuration file.
   The configuration file is either located at:
