Fixing documentation and guides index page.

--- a/modules/common-workflows/nav-common-workflows-guide.adoc
+++ b/modules/common-workflows/nav-common-workflows-guide.adoc
@@ -9,7 +9,7 @@ include::./branding/pdf/entities.adoc[]
 endif::[]
 
 
-* xref:cw-overview.adoc[Common Workflows]
+* xref:common-workflows-overview.adoc[Common Workflows]
 ** xref:recipe-onboarding.adoc[Onboarding]
 ** xref:recipe-clm.adoc[Content Lifecycle Management]
 ** xref:recipe-configmgmt.adoc[Configuration Management]
