--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -56,13 +56,14 @@ Download All PDFs icon:caret-right[] icon:file-archive[link="../susemanager-docs
 |===
 | View HTML | View PDF | View HTML | View PDF
 
-| xref:quickstart:quickstart-overview.adoc[Quick Start]  | icon:file-pdf[link="../pdf/uyuni_quickstart.pdf", window="_blank" role="green"]
+| xref:quickstart:quickstart-overview.adoc[Quick Start]  | icon:file-pdf[link="../pdf/suse_manager_quickstart_guide.pdf", window="_blank" role="green"]
 | xref:retail:retail-overview.adoc[Retail Guide]  | icon:file-pdf[link="../pdf/suse_manager_retail_guide.pdf", window="_blank" role="green"]
 | xref:installation-and-upgrade:installation-and-upgrade-overview.adoc[Installation/Upgrade Guide]  | icon:file-pdf[link="../pdf/suse_manager_installation-and-upgrade_guide.pdf", window="_blank" role="green"]
 | xref:reference:reference-overview.adoc[Reference Guide]  | icon:file-pdf[link="../pdf/suse_manager_reference_guide.pdf", window="_blank" role="green"]
 | xref:client-configuration:client-config-overview.adoc[Client Configuration Guide] | icon:file-pdf[link="../pdf/suse_manager_client-configuration_guide.pdf", window="_blank" role="green"]
-| xref:specialized-guides:specialized-guides-overview.adoc[Specialized Guides]  | icon:file-pdf[link="../pdf/uyuni_specialized-guides.pdf", window="_blank" role="green"]
+| xref:common-workflows:common-workflows-overview.adoc[Common Workflows] | icon:file-pdf[link="../pdf/suse_manager_common-workflows_guide.pdf", window="_blank" role="green"]
 | xref:administration:admin-overview.adoc[Administration Guide] | icon:file-pdf[link="../pdf/suse_manager_administration_guide.pdf", window="_blank" role="green"]
+| xref:specialized-guides:specialized-guides-overview.adoc[Specialized Guides] | icon:file-pdf[link="../pdf/suse_manager_specialized-guides_guide.pdf", window="_blank" role="green"]
 ||
 
 //| Architecture               | xref:architecture:architecture-intro.adoc[HTML] link:../pdf/suse_manager_architecture.pdf[PDF]
@@ -83,13 +84,14 @@ Download All PDFs icon:caret-right[] icon:file-archive[link="../uyuni-docs_en-pd
 |===
 | View HTML | View PDF | View HTML | View PDF
 
-| xref:quickstart:quickstart-overview.adoc[Quick Start]  | icon:file-pdf[link="../pdf/uyuni_quickstart.pdf", window="_blank" role="green"]
-| xref:retail:retail-overview.adoc[Retail Guide]  | icon:file-pdf[link="../pdf/suse_manager_retail_guide.pdf", window="_blank" role="green"]
-| xref:installation-and-upgrade:installation-and-upgrade-overview.adoc[Installation/Upgrade Guide]  | icon:file-pdf[link="../pdf/suse_manager_installation_and-upgrade_guide.pdf", window="_blank" role="green"]
-| xref:reference:reference-overview.adoc[Reference Guide]  | icon:file-pdf[link="../pdf/suse_manager_reference_guide.pdf", window="_blank" role="green"]
-| xref:client-configuration:client-config-overview.adoc[Client Configuration Guide] | icon:file-pdf[link="../pdf/suse_manager_client-configuration_guide.pdf", window="_blank" role="green"]
-| xref:specialized-guides:specialized-guides-overview.adoc[Specialized Guides]  | icon:file-pdf[link="../pdf/uyuni_specialized-guides.pdf", window="_blank" role="green"]
-| xref:administration:admin-overview.adoc[Administration Guide] | icon:file-pdf[link="../pdf/suse_manager_administration_guide.pdf", window="_blank" role="green"]
+| xref:quickstart:quickstart-overview.adoc[Quick Start]  | icon:file-pdf[link="../pdf/uyuni_quickstart_guide.pdf", window="_blank" role="green"]
+| xref:retail:retail-overview.adoc[Retail Guide]  | icon:file-pdf[link="../pdf/uyuni_retail_guide.pdf", window="_blank" role="green"]
+| xref:installation-and-upgrade:installation-and-upgrade-overview.adoc[Installation/Upgrade Guide]  | icon:file-pdf[link="../pdf/uyuni_installation-and-upgrade_guide.pdf", window="_blank" role="green"]
+| xref:reference:reference-overview.adoc[Reference Guide]  | icon:file-pdf[link="../pdf/uyuni_reference_guide.pdf", window="_blank" role="green"]
+| xref:client-configuration:client-config-overview.adoc[Client Configuration Guide] | icon:file-pdf[link="../pdf/uyuni_client-configuration_guide.pdf", window="_blank" role="green"]
+| xref:common-workflows:common-workflows-overview.adoc[Common Workflows] | icon:file-pdf[link="../pdf/uyuni_common-workflows_guide.pdf", window="_blank" role="green"]
+| xref:administration:admin-overview.adoc[Administration Guide] | icon:file-pdf[link="../pdf/uyuni_administration_guide.pdf", window="_blank" role="green"]
+| xref:specialized-guides:specialized-guides-overview.adoc[Specialized Guides] | icon:file-pdf[link="../pdf/uyuni_specialized-guides_guide.pdf", window="_blank" role="green"]
 ||
 
 //| Architecture               | xref:architecture:architecture-intro.adoc[HTML] link:../pdf/suse_manager_architecture.pdf[PDF]
