--- a/README.adoc
+++ b/README.adoc
@@ -68,7 +68,7 @@ image:https://github.com/uyuni-project/uyuni-docs/workflows/translation_test_ja_
 
 
 
-
+testing xref validation*
 
 
 [suma.doc.intro]
