Fixing book title creation.

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -1,8 +1,8 @@
-// Installation Guide Antora Navigation List
+// Installation and Upgrade Guide Antora Navigation List
 
 // PDF Installation Guide
 ifdef::backend-pdf[]
-= [.title]#{productname} {productnumber}#: Installation Guide
+= [.title]#{productname} {productnumber}#: Installation and Upgrade Guide
 include::./branding/pdf/entities.adoc[]
 :toclevels: 3
 :doctype: book
