--- a/modules/quickstart/nav-quickstart-guide.adoc
+++ b/modules/quickstart/nav-quickstart-guide.adoc
@@ -1,7 +1,8 @@
-// Servers Installation Guide Antora Navigation List
+// Quick Start Guide Navigation List
 
-// PDF Installation Guide
+// PDF Quick Start Guide
 ifdef::backend-pdf[]
+= [.title]#{productname} {productnumber}#: Quick Start Guide
 include::./branding/pdf/entities.adoc[]
 :toclevels: 3
 :doctype: book
