warning about the origin of the salt-minion package

--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -80,10 +80,9 @@ Salt ([package]``salt-minion``)::
 * [path]``/etc/salt/minion.d/NAME.conf``
 * systemd service file: [path]``salt-minion.service``
 
-// FIXME: change wording of NOTE
-[NOTE]
+[WARNING]
 ====
-the "salt-minion" package must come from the client tools channels or from an official SUSE distro.
+Bootstrapping this way will only work if you use the [package]``salt-minion`` being part of the client tools channels or of an official {suse} distributions.
 ====
 
 .Procedure: Registering Clients with Salt Minion Configuration File
