--- a/modules/common-workflows/nav-common-workflows-guide.adoc
+++ b/modules/common-workflows/nav-common-workflows-guide.adoc
@@ -10,9 +10,9 @@ endif::[]
 
 
 * xref:common-workflows-overview.adoc[Common Workflows]
-** xref:recipe-onboarding.adoc[Onboarding]
-** xref:recipe-clm.adoc[Content Lifecycle Management]
-** xref:recipe-configmgmt.adoc[Configuration Management]
+** xref:workflow-configuration-management.adoc[Configuration Management]
+** xref:workflow-content-lifecycle-management.adoc[Content Lifecycle Management]
+** xref:workflow-onboarding.adoc[Onboarding]
 
 // License
 ifdef::backend-pdf[]
