--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -78,6 +78,12 @@ For more information, see xref:administration:tshoot-registertradrhel.adoc[].
 ====
 
 
+Before you start with creating a software repository using the {webui} ensure that the [path]``repodata`` directory with the [path]``repomod.xml`` exists in the tree with your data.
+If it is missing, use the [command]``createrepo`` command.
+----
+createrepo /path/to/your/data
+----
+For example, replace [path]``/path/to/your/data`` with the [path]``/opt/mytools`` directory that we use in the following procedure.
 
 .Procedure: Creating a Software Repository
 . In the {productname} {webui}, navigate to menu:Software[Manage > Repositories], and click btn:[Create Repository].
