wording improvements and add changelog entry

--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -78,18 +78,18 @@ For more information, see xref:administration:tshoot-registertradrhel.adoc[].
 ====
 
 
-Before you start with creating a software repository using the {webui} ensure that the [path]``repodata`` directory with the [path]``repomod.xml`` exists in the tree with your data.
-If it is missing, use the [command]``createrepo`` command.
+Before you start with creating a software repository with the {webui} ensure that the [path]``repodata`` directory with the [path]``repomod.xml`` file exists in your repository directory.
+If [path]``repodata`` is missing, use the [command]``createrepo`` command:
 ----
-createrepo /path/to/your/data
+createrepo /path/to/repo/directory
 ----
-For example, replace [path]``/path/to/your/data`` with the [path]``/opt/mytools`` directory that we use in the following procedure.
+For example, replace [path]``/path/to/repo/directory`` with the [path]``/opt/mytools`` directory that is used in the following procedure.
 
 .Procedure: Creating a Software Repository
 . In the {productname} {webui}, navigate to menu:Software[Manage > Repositories], and click btn:[Create Repository].
 . On the [guimenu]``Create Repository`` page, give your repository a label (for example, [systemitem]``my-tools-sles15sp1-x86_64-repo``).
 . In the [guimenu]``Repository URL`` field, provide the path to the directory that contains the [path]``repodata`` file (for example, [systemitem]``file:///opt/mytools/``).
-    You can use any valid addressing protocol in this field.
+  You can use any valid addressing protocol in this field.
 . Uncheck the [guimenu]``Has Signed Metadata?`` check box.
 . OPTIONAL: Complete the SSL fields if your repository requires client certificate authentication.
 . Click btn:[Create Repository].
