--- a/modules/common-workflows/pages/workflow-configuration-management.adoc
+++ b/modules/common-workflows/pages/workflow-configuration-management.adoc
@@ -36,7 +36,9 @@ For more information about the different ways to manage configuration, see xref:
 
 == Steps
 
-Create a new configuration channel and file::
+//Create a new configuration channel and file::
+.Procedure: Create a new configuration channel and file
+[role=procedure]
 
 . In the {productname} {webui}, navigate to menu:Configuration[Channels] and click btn:[Create State Channel].
 . Type a name, label, and description for your configuration file, and type the contents of your configuration file.
@@ -45,7 +47,9 @@ An example that you can copy is at the end of this section.
 +
 image::new_state.png[scaledwidth=80%]
 
-Assign clients to the configuration channel::
+
+//Assign clients to the configuration channel::
+. Procedure: Assign clients to the configuration channel
 
 . In the {productname} {webui}, navigate to menu:Systems[Systems List] and select the client you want to assign to your configuration channel.
 . Navigate to the [guimenu]``Configuration`` tab.
@@ -55,21 +59,17 @@ Assign clients to the configuration channel::
 image::assign_client_cfg.png[scaledwidth=80%]
 . If you have more than one configuration channel, you can rank them in order of importance, or click btn:[Update Channel Rankings] to finish.
 
-Apply the configuration to your client::
+//Apply the configuration to your client::
+.Procedure: Apply the configuration to your client
 . In the {productname} {webui}, navigate to menu:Systems[Systems List] and select the client you want to assign to your configuration channel.
 . Navigate to the [guimenu]``Configuration`` tab.
   In the guimenu:``Configuration Actions`` section, click btn:[Deploy all managed config files].
 
 
 
-== More information
+== Example
 
-* For more about configuration management, see xref:client-configuration:configuration-management.adoc[].
-* For more about SLS files, see: https://docs.saltproject.io/en/latest/topics/tutorials/starting_states.html.
-
-
-
-.Example: SLS State for Keeping Clients Updated
+=== SLS State for Keeping Clients Updated
 ----
 include:
   - channels
@@ -114,3 +114,12 @@ int_reboot_if_needed:
     - onlyif: 'zypper ps -s; [ $? -eq 102 ]'
 {%- endif %}
 ----
+
+
+
+
+== More information
+
+* For more about configuration management, see xref:client-configuration:configuration-management.adoc[].
+* For more about SLS files, see: https://docs.saltproject.io/en/latest/topics/tutorials/starting_states.html.
+
