Salt minion instsource #16689 keichwa (#1400)
https://github.com/SUSE/spacewalk/issues/16689
* warning about the origin of the salt-minion package

--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -21,6 +21,11 @@ For more information, see xref:registration-bootstrap.adoc[].
 This procedure requires that you have installed the [package]``salt-minion`` package on the Salt client before registration.
 For SLE 12 based clients, you also must have activated the [systemitem]``Advanced Systems Management`` module.
 
+[WARNING]
+====
+Bootstrapping this way will only work if you use the [package]``salt-minion`` being part of the client tools channels or of an official {suse} distributions.
+====
+
 
 
 .Procedure: Registering Clients with Salt Minion Configuration File
