Salt minion instsource #16689 keichwa (#1400)
https://github.com/SUSE/spacewalk/issues/16689
* warning about the origin of the salt-minion package

--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -22,6 +22,12 @@ This procedure requires that you have installed the [package]``venv-salt-minion`
 Both use configuration files in different locations and filenames remain the same.
 The systemd service filename is different.
 
+[WARNING]
+====
+Bootstrapping this way will only work if you use the [package]``salt-minion`` being part of the client tools channels or of an official {suse} distributions.
+====
+
+
 Salt Bundle ([package]``venv-salt-minion``)::
 +
 * [path]``/etc/venv-salt-minion/``
