uyuni-setup-reportdb-user first draft

--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -1,3 +1,26 @@
 [[lsd-hub-reporting]]
 = Hub Reporting
 
+== Create a DB user for the reporting
+
+Users can be managed using ``uyuni-setup-reportdb-user`` .
+
+----
+usage: reportdb-user-management.sh [options]
+
+options:
+  --help 
+            show this help message and exit
+  --non-interactive
+            Switches to non-interactive mode
+  --dbuser=DBUSER
+            Report DB User
+  --dbpassword=DBPASSWORD
+            Report DB Password
+  --add
+            Add the new user
+  --delete
+            Delete the user
+  --modify
+            Set a new password
+----
