fix script name

--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -6,7 +6,7 @@
 Users can be managed using ``uyuni-setup-reportdb-user`` .
 
 ----
-usage: reportdb-user-management.sh [options]
+usage: uyuni-setup-reportdb-user [options]
 
 options:
   --help 
