--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -8,13 +8,13 @@ The main database is a PostgresDB in the {productname} Hub system.  It stores al
 Other databases with the same schema are also present in all the servers, to collect information for that system. In summary:
 
 - the DB in {productname} Hub stores, collects and eventually aggregates data coming from all the DBs of the peripheral Servers,
-- the DB in {productname} Hub stores also its own data - data from the systems directly connected and managed by the Hub,
+- the DB in {productname} Hub stores also its own data 
+- data from the systems directly connected and managed by the Hub,
 - the DB in peripheral {productname} Server stores its own data,
 - the reporting tool can be connected either to the Hub or to any {productname} Server.
 
 == Setup
-
-#TODO Add temporary installation steps (at the end everything should be installed by default)
+Database and schema are setup by default.
 
 === Create a DB user for the reporting
 
