Convert pubcloud-setup from in-page link to full hyperlink
Without the ".adoc" on the pubcloud-setup reference, the link for Public Cloud Setup page doesn't work in the published version of the Nav Panel because it attempts to link to an in-page section link to a section that doesn't exist: 

HTML renders with:
"[Any Current Page URL]#pubcloud-setup" 
instead of: 
"[URL to Nav Page]/pubcloud-setup.html"

--- a/modules/installation/nav-installation-guide.adoc
+++ b/modules/installation/nav-installation-guide.adoc
@@ -27,7 +27,7 @@ endif::[]
 *** xref:server-setup.adoc[Server Setup]
 *** xref:proxy-registration.adoc[Proxy Registration]
 *** xref:proxy-setup.adoc[Proxy Setup]
-*** xref:pubcloud-setup[Public Cloud Setup]
+*** xref:pubcloud-setup.adoc[Public Cloud Setup]
 //GFDL
 //** xref:common_gfdl1.2_i.adoc[License]
 
