Changed HW requirements section.

--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -36,7 +36,7 @@ You can estimate how much space the [path]``/var/spacewalk/`` directory requires
 
 | CPU
 | -
-| Minimum 4 dedicated 64-bit CPU cores
+| Minimum 4 dedicated 64-bit CPU cores ({x86_64})
 
 | RAM
 | Test Server
@@ -52,7 +52,7 @@ You can estimate how much space the [path]``/var/spacewalk/`` directory requires
 
 | Disk Space
 | [path]``/`` (root directory)
-| Minimum 24{nbsp}GB
+| Minimum 40{nbsp}GB
 
 |
 | [path]``/var/lib/pgsql``
@@ -159,7 +159,7 @@ endif::[]
 
 | Disk Space
 | [path]``/`` (root directory)
-| Minimum 24{nbsp}GB
+| Minimum 40{nbsp}GB
 
 |
 | [path]``/srv``
