--- a/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
@@ -4,19 +4,59 @@
 The following table specifies the minimum requirements.
 // In this table, replace ``version`` with the version of the product you are using.
 
-[cols="1,1", options="header"]
-.Software and Hardware Requirements
+[cols="1,1,1", options="header"]
+.Server Hardware Requirements for {x86_64} Architecture
 |===
-| Software and Hardware  | Recommended
-| Operating System:      | openSUSE Leap 15.3: Clean installation, up-to-date
-| CPU:                   | Minimum 4 dedicated 64-bit CPU cores ({x86_64})
-| RAM:                   | _Test Server_ Minimum 8{nbsp}GB
-|                        | _Base Installation_ Minimum 16{nbsp}GB
-|                        | _Production Server_ Minimum 32{nbsp}GB
-| Disk Space:            | Disk space depends on your channel requirements, at least 100 GB
-|                        | 50 GB per SUSE or openSUSE product and 360 GB per Red Hat product
-| Swap space:            | 3{nbsp}GB
+
+| Software and Hardware
+| Details
+| Recommendation
+
+| openSUSE Leap 15.3
+| Clean installation, up-to-date 
+| openSUSE Leap 15.3
+
+| CPU
+| -
+| Minimum 4 dedicated 64-bit CPU cores ({x86_64})
+
+| RAM
+| Test Server
+| Minimum 8{nbsp}GB
+
+|
+| Base Installation
+| Minimum 16{nbsp}GB
+
+|
+| Production Server
+| Minimum 32{nbsp}GB
+
+| Disk Space
+| [path]``/`` (root directory)
+| Minimum 40{nbsp}GB
+
+|
+| [path]``/var/lib/pgsql``
+| Minimum 50{nbsp}GB
+
+|
+| [path]``/var/spacewalk``
+| Minimum 50{nbsp}GB per {suse} product and 360{nbsp}GB per Red Hat product
+
+|
+| [path]``/var/cache``
+| Minimum 10{nbsp}GB.
+Add 100{nbsp}MB per {suse} product, 1{nbsp}GB per Red Hat or other product.
+Double the space if the server is an ISS Master.
+
+|
+| Swap space
+| 3{nbsp}GB
+
 |===
+
+
 
 ////
 [NOTE]
