--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -5,7 +5,7 @@ The data are made available for external Reporting Tools.
 
 == Architecture
 The main database is a PostgresDB in the {productname} Hub system.  It stores all the information collected from all the servers, and eventually aggregates them. 
-Other databases with the same schema are also present in all the servers, to collect information for that system. In summary:
+Every peripheral Server has its own reporting database where the information is collected for that system. In summary:
 
 - the DB in {productname} Hub stores, collects and eventually aggregates data coming from all the DBs of the peripheral Servers,
 - the DB in {productname} Hub stores also its own data 
