--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -44,7 +44,7 @@ options:
 
 The schema export the most important tables from the main {productname} Database as a de-normalized variant containing only data which are relevant for a report.
 
-A ready-to-use report can be provided with views doing joins over multiple tables.
+A ready-to-use reports are provided with views doing joins over multiple tables.
 
 Every table gets an extra column for the {productname} server id of server which provide the data `mgm_id`. 
 On a single {productname} Server this column has the standard value 1 which represent "localhost". 
