--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -46,7 +46,7 @@ The schema export the most important tables from the main {productname} Database
 
 A ready-to-use reports are provided with views doing joins over multiple tables.
 
-Every table gets an extra column for the {productname} server id of server which provide the data `mgm_id`. 
+Every table gets an extra id column (`mgm_id`) for the {productname} server which provided the data. 
 On a single {productname} Server this column has the standard value 1 which represent "localhost". 
 On the {productname} Hub it is replaced with the real server id the managed server has in the hub database.
 
