--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -13,7 +13,8 @@ Every peripheral Server has its own reporting database where the information is 
 - the reporting tool can be connected either to the Hub or to any {productname} Server.
 
 == Setup
-Database and schema are setup by default.
+The reporting database and schema are setup by default using the local postgresql server.
+The reporting database is a separate database accessible via the network.
 
 === Create a DB user for the reporting
 
