--- a/modules/common-workflows/pages/workflow-configuration-management.adoc
+++ b/modules/common-workflows/pages/workflow-configuration-management.adoc
@@ -1,12 +1,12 @@
-[[cookbook-config-mgmt]]
+[[workflow-configuration-management]]
 = Configuration Management
 
 You can use configuration files and channels to manage configuration for your clients, rather than configuring each client manually.
-This recipe shows you how to use the {productname} {webui} to create a centrally-managed configuration file, assign it to a Salt client, and apply the configuration.
+This workflow shows you how to use the {productname} {webui} to create a centrally-managed configuration file, assign it to a Salt client, and apply the configuration.
 
 
 
-== Problem
+== Use case 
 
 If you are managing a lot of clients, you probably do not want to manually apply configuration settings to each of them in turn.
 Configuration channels are used to organize configuration files.
@@ -14,29 +14,30 @@ You can subscribe clients to configuration channels, and deploy configuration fi
 
 
 
-== Solution
+== Outcome
 
-When you have completed this recipe, you will have a configuration channel containing a configuration file, have assigned clients to the channel, and applied the configuration successfully.
+When you have completed this workflow, you will have a configuration channel containing a configuration file, have assigned clients to the channel, and applied the configuration successfully.
 
 
 
-== Before you begin
+== Preparation
 
 Before you start, you should already have:
 
-* A {productname} Server installed, that you can access using the {webui}.
+* {productname} Server installed, that you can access using the {webui}.
 * At least one Salt client registered to your server.
 * Appropriate subscriptions from http://scc.suse.com for the products you are using.
 
-This recipe uses a centrally managed configuration file and a Salt state.
+This workflow uses a centrally managed configuration file and a Salt state.
 You can also use locally-managed configuration files,  traditional clients, and different methods, to get more flexibility in how you manage configuration in your environment.
 For more information about the different ways to manage configuration, see xref:client-configuration:configuration-management.adoc[].
 
 
 
-== Steps
+== Step-by-step workflow instructions
 
-Create a new configuration channel and file::
+.Procedure: Create a new configuration channel and file
+[role=procedure]
 
 . In the {productname} {webui}, navigate to menu:Configuration[Channels] and click btn:[Create State Channel].
 . Type a name, label, and description for your configuration file, and type the contents of your configuration file.
@@ -45,8 +46,9 @@ An example that you can copy is at the end of this section.
 +
 image::new_state.png[scaledwidth=80%]
 
-Assign clients to the configuration channel::
 
+. Procedure: Assign clients to the configuration channel
+[role=procedure]
 . In the {productname} {webui}, navigate to menu:Systems[Systems List] and select the client you want to assign to your configuration channel.
 . Navigate to the [guimenu]``Configuration`` tab.
   In the guimenu:``Configuration Overview`` section, click btn:[Subscribe to channels].
@@ -55,21 +57,17 @@ Assign clients to the configuration channel::
 image::assign_client_cfg.png[scaledwidth=80%]
 . If you have more than one configuration channel, you can rank them in order of importance, or click btn:[Update Channel Rankings] to finish.
 
-Apply the configuration to your client::
+.Procedure: Apply the configuration to your client
+[role=procedure]
 . In the {productname} {webui}, navigate to menu:Systems[Systems List] and select the client you want to assign to your configuration channel.
 . Navigate to the [guimenu]``Configuration`` tab.
   In the guimenu:``Configuration Actions`` section, click btn:[Deploy all managed config files].
 
 
 
-== More information
+== Example
 
-* For more about configuration management, see xref:client-configuration:configuration-management.adoc[].
-* For more about SLS files, see: https://docs.saltproject.io/en/latest/topics/tutorials/starting_states.html.
-
-
-
-.Example: SLS State for Keeping Clients Updated
+=== SLS State for Keeping Clients Updated
 ----
 include:
   - channels
@@ -114,3 +112,11 @@ int_reboot_if_needed:
     - onlyif: 'zypper ps -s; [ $? -eq 102 ]'
 {%- endif %}
 ----
+
+
+
+== Related topics
+
+* For more information about configuration management, see xref:client-configuration:configuration-management.adoc[].
+* For more information about SLS files, see: https://docs.saltproject.io/en/latest/topics/tutorials/starting_states.html.
+
