--- a/modules/common-workflows/pages/workflow-content-lifecycle-management.adoc
+++ b/modules/common-workflows/pages/workflow-content-lifecycle-management.adoc
@@ -1,4 +1,4 @@
-[[cookbook-clm]]
+[[workflow-clm]]
 = Content Lifecycle Management
 
 If you are managing a lot of clients and you need to apply customized packages to them, you can use content lifecycle management (CLM) to manage your packages.
@@ -7,33 +7,34 @@ It is also useful if you need to apply updates during a limited maintenance wind
 
 
 
-== Problem
+== Use case
 
 Content lifecycle management allows you to select software channels as sources, adjust them as required for your environment, and thoroughly test them before installing onto your production clients.
 You can use CLM to manage your software channels from development, through testing, and rolling the changes out to your clients.
 
 
 
-== Solution
+== Outcome
 
-When you have completed this recipe, you will have a content lifecycle project set up.
+When you have completed this workflow, you will have a content lifecycle project set up.
 You will have created a basic CLM project, and promoted it through its lifecycle.
 
 
 
-== Before you begin
+== Preparations
 
 Before you start, you should already have:
 
-* A {productname} Server installed, which you can access using the {webui}.
-* A client machine with an operating system installed, which you can access across the network that your {productname} Server is on, using SSH.
+* {productname} Server installed, which you can access using the {webui}.
+* Client machine with an operating system installed, which you can access across the network that your {productname} Server is on, using SSH.
 * Appropriate subscriptions from http://scc.suse.com for the products you are using.
 
 
 
-== Steps
+== Step-by-step workflow instructions
 
-Create a new CLM project::
+.Procedure: Create a new CLM project
+[role=peocedure]
 . In the {productname} {webui}, navigate to menu:Content Lifecycle[Projects], and click btn:[Create Project].
   Type a name, label, and description for your project, and click btn:[Create].
 +
@@ -57,7 +58,8 @@ image::clm_environments.png[scaledwidth=80%]
 +
 image::clm_build_1.png[scaledwidth=80%]
 
-Assign clients::
+.Procedure: Assign clients
+[role=procedure]
 . Navigate to menu:Systems[System List], select the client to assign, and go to the menu:Software[Software Channels] tab.
 . In the [guimenu]``Base Channel`` section, select the CLM project and environment you want to assign the client to.
   For example, if you want this client to receive updates from your CLM only when packages are in the ``production`` environment, assign the base channel ``<CLM_Project_Name>-production-<Channel_Name>``.
@@ -66,7 +68,8 @@ Assign clients::
 image::clm_assign.png[scaledwidth=80%]
 . Click btn:[Next] to assign the client.
 
-Promote Environments::
+.Procedure: Promote Environments
+[role=procedure]
   . In the {productname} {webui}, navigate to menu:Content Lifecycle[Projects], and select the project you want to work with.
   . In the [guimenu]``Environment Lifecycle`` section, locate the environment to promote to its successor, and click btn:[Promote].
     You can monitor build progress in the [guimenu]``Environment Lifecycle`` section.
@@ -75,7 +78,7 @@ image::clm_promote.png[scaledwidth=80%]
 
 
 
-== More information
+== Related topics
 
-* For more about CLM, including information about how to use filters, see xref:administration:content-lifecycle.adoc[].
+* For more information about CLM, including information about how to use filters, see xref:administration:content-lifecycle.adoc[].
 * For CLM examples, see xref:administration:content-lifecycle-examples.adoc[].
