--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -46,7 +46,7 @@ options:
 
 The schema export the most important tables from the main {productname} Database as a de-normalized variant containing only data which are relevant for a report.
 
-A ready-to-use reports are provided with views doing joins over multiple tables.
+Ready-to-use reports are provided as views, aggregating data over multiple tables.
 
 Every table gets an extra id column (`mgm_id`) for the {productname} server which provided the data. 
 On a single {productname} Server this column has the standard value `1` which represent "localhost". 
