--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -48,7 +48,7 @@ The schema export the most important tables from the main {productname} Database
 
 Ready-to-use reports are provided as views, aggregating data over multiple tables.
 
-Every table gets an extra id column (`mgm_id`) for the {productname} server which provided the data. 
+Every table gets an extra id column (`mgm_id`) specifying the {productname} server which provided the data. 
 On a single {productname} Server this column has the standard value `1` which represent "localhost". 
 On the {productname} Hub it is replaced with the real server id the managed server has in the hub database.
 
