--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -52,7 +52,7 @@ Every table gets an extra id column (`mgm_id`) specifying the {productname} serv
 On a single {productname} Server this column has the standard value `1` which represent "localhost". 
 On the {productname} Hub it is replaced with the real server id the managed server has in the hub database.
 
-The `synced_date` represent the time when the data were exported from the main {productname} Server database.
+Another common additional field is `synced_date`, which represent the time when the data were exported from the main {productname} Server database.
 
 image::reportdb_schema.png[]
 
