--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -44,7 +44,7 @@ options:
 
 == Database Schema
 
-The schema export the most important tables from the main {productname} Database as a de-normalized variant containing only data which are relevant for a report.
+The schema exports the most important tables from the main {productname} Database as a de-normalized variant containing only data which are relevant for a report.
 
 Ready-to-use reports are provided as views, aggregating data over multiple tables.
 
