--- a/modules/retail/pages/retail-install-unified.adoc
+++ b/modules/retail/pages/retail-install-unified.adoc
@@ -113,7 +113,7 @@ For Branch Server, the expected modules are:
 * SLE-Module-Server-Applications15-SP3-Pool for x86_64 SMRBS 4.2
 * SLE-Module-Server-Applications15-SP3-Updates for x86_64 SMRBS 4.2
 * SLE-Product-SUSE-Manager-Retail-Branch-Server-4.2-Updates for x86_64
-. Use this activation key in {productname} Proxy registration at xref:installation-and-upgrade:proxy-registration.adoc[].
+. Use this activation key in {productname} Proxy registration at xref:installation:proxy-registration.adoc[].
 . Configure {productname} Proxy.
   For more information on how to do this, see xref:installation:proxy-setup.adoc[].
 
