--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -78,12 +78,10 @@ For more information, see xref:administration:tshoot-registertradrhel.adoc[].
 ====
 
 
-Before you start with creating a software repository with the {webui} ensure that the [path]``repodata`` directory with the [path]``repomod.xml`` file exists in your repository directory.
-If [path]``repodata`` is missing, use the [command]``createrepo`` command:
-----
-createrepo /path/to/repo/directory
-----
-For example, replace [path]``/path/to/repo/directory`` with the [path]``/opt/mytools`` directory that is used in the following procedure.
+Before you start with creating a software repository with the {webui} ensure that needed extra metadata is available.
+Tools such as [command]``createrepo`` and [command]``reprepro`` are useful in this regard.
+[command]``mgr-push`` can help with pushing a single RPM into a channel.
+For more information, see the  man pages for [literal]``createrepo_c`` and [literal]``reprepro``.
 
 .Procedure: Creating a Software Repository
 . In the {productname} {webui}, navigate to menu:Software[Manage > Repositories], and click btn:[Create Repository].
