--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -5,7 +5,7 @@ The Hub prepares and provides content for multiple peripheral {productname} Serv
 The data is made available for external Reporting Tools.
 
 == Architecture
-The main database is a PostgresDB in the {productname} Hub system.  It stores all the information collected from all the servers, and eventually aggregates them. 
+The main database is a PostgreSQL database (DB) in the {productname} Hub system.  It stores all the information collected from all the servers, and eventually aggregates them. 
 Every peripheral Server has its own reporting database where the information is collected for that system. In summary:
 
 - the DB in {productname} Hub stores, collects and eventually aggregates data coming from all the DBs of the peripheral Servers,
@@ -14,13 +14,13 @@ Every peripheral Server has its own reporting database where the information is 
 - the reporting tool can be connected either to the Hub or to any {productname} Server.
 
 == Setup
-The reporting database and schema are setup by default using the local postgresql server.
+The reporting database and schema are set up by default using the local PostgreSQL server.
 The reporting database is a separate database accessible via the network.
 
 === Create a DB user for the reporting
 
 Before connecting an external Reporting Tools to the Database, a user with read-only permission should be created.
-For doing that, it is possible to use ``uyuni-setup-reportdb-user`` .
+For doing that, it is possible to use ``uyuni-setup-reportdb-user``.
 
 ----
 usage: uyuni-setup-reportdb-user [options]
@@ -48,7 +48,7 @@ The schema exports the most important tables from the main {productname} Databas
 
 Ready-to-use reports are provided as views, aggregating data over multiple tables.
 
-Every table gets an extra id column (`mgm_id`) specifying the {productname} server which provided the data. 
+Every table gets an extra id column (`mgm_id`) specifying the {productname} Server which provided the data. 
 On a single {productname} Server this column has the standard value `1` which represent "localhost". 
 On the {productname} Hub it is replaced with the real server id the managed server has in the hub database.
 
