Added link to new guide.

--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -86,3 +86,5 @@ For more information about an individual report, run [command]``spacewalk-report
 This shows the description and list of possible fields in the report.
 
 For further information on program invocation and options, see the [literal]``spacewalk-report(8)`` man page as well as the [option]``--help`` parameter of the [command]``spacewalk-report`` command.
+
+For more information about hub reporting, see xref:specialized-guides:large-deployments/hub-reporting.adoc[].
