Add information about deprecated trad. clients
This will add some information regarding the deprecation of traditional
clients in upcoming releases. Furthermore it adds some minimal steps in
order to be able to register an unregistered traditional client as Salt
minion afterwards.

--- a/modules/client-configuration/pages/contact-methods-traditional.adoc
+++ b/modules/client-configuration/pages/contact-methods-traditional.adoc
@@ -11,3 +11,12 @@ No system within the DMZ is authorized to open a connection to the internal netw
 
 OSAD is an alternative contact method between {productname} and traditional clients.
 OSAD allows traditional clients to execute scheduled actions immediately.
+
+[WARNING]
+====
+Traditional clients will be deprecated with the next {productname} version and will not be supported with future releases.
+Be aware that when migrating from traditional clients to Salt minions you do not have to delete the registered clients
+before. You can just register them as Salt minions and Salt will do the necessary steps with the traditional client. If
+you already deleted the traditional client and the registration as Salt minion is not possible anymore, see
+xref:installation-and-upgrade:troubleshooting.adoc[Troubleshooting].
+====
