--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -16,3 +16,16 @@ This procedure works for both traditional and Salt clients.
 
 You can also delete multiple clients using the system set manager.
 For more information about the system set manager, see xref:client-configuration:system-set-manager.adoc[].
+
+[IMPORTANT]
+====
+It is not possible to automatically clean up a a traditional client after deleting it. You have to take care of this
+yourself. Furthermore cleaning up a Salt minion does not remove Salt itself.
+====
+
+[NOTE]
+====
+Normally you migrate a traditional client to a Salt minion without deleting the client. Salt automatically detects
+that you have a traditional client and does the necessary changes itself. But if you already deleted the traditional
+client and want to register it as a Salt minion again, see xref:installation-and-upgrade:troubleshooting.adoc[Troubleshooting].
+====
