--- a/modules/quickstart/pages/quickstart-install-uyuni-proxy.adoc
+++ b/modules/quickstart/pages/quickstart-install-uyuni-proxy.adoc
@@ -246,7 +246,7 @@ zypper in susemanager-tftpsync
 ----
 configure-tftpsync.sh
 ----
-. Run the script again with the fully-qualified domain name of the proxy you are setting up.
+. Run the script again with the fully qualified domain name of the proxy you are setting up.
   This creates the configuration, and uploads it to the {productname} Proxy:
 +
 ----
