--- a/modules/quickstart/pages/quickstart-install-uyuni-server.adoc
+++ b/modules/quickstart/pages/quickstart-install-uyuni-server.adoc
@@ -32,7 +32,7 @@ This table shows the software and hardware requirements for installing an Uyuni 
 == Install Uyuni Server on openSUSE Leap
 
 You can use a physical or virtual machine running openSUSE Leap to install the Uyuni Server.
-Configure a resolvable fully-qualified domain name on the server before you begin, to ensure that the server is accessible across the network.
+Configure a resolvable fully qualified domain name on the server before you begin, to ensure that the server is accessible across the network.
 
 The {productname} Server software is available from download.opensuse.org, and you can use zypper to retrieve the software and install it.
 
