--- a/modules/common-workflows/pages/workflow-configuration-management.adoc
+++ b/modules/common-workflows/pages/workflow-configuration-management.adoc
@@ -2,7 +2,7 @@
 = Configuration Management
 
 You can use configuration files and channels to manage configuration for your clients, rather than configuring each client manually.
-This workflow shows you how to use the {productname} {webui} to create a centrally-managed configuration file, assign it to a Salt client, and apply the configuration.
+This workflow shows you how to use the {productname} {webui} to create a centrally managed configuration file, assign it to a Salt client, and apply the configuration.
 
 
 
@@ -29,7 +29,7 @@ Before you start, you should already have:
 * Appropriate subscriptions from http://scc.suse.com for the products you are using.
 
 This workflow uses a centrally managed configuration file and a Salt state.
-You can also use locally-managed configuration files,  traditional clients, and different methods, to get more flexibility in how you manage configuration in your environment.
+You can also use locally managed configuration files,  traditional clients, and different methods, to get more flexibility in how you manage configuration in your environment.
 For more information about the different ways to manage configuration, see xref:client-configuration:configuration-management.adoc[].
 
 
