--- a/modules/common-workflows/pages/workflow-onboarding.adoc
+++ b/modules/common-workflows/pages/workflow-onboarding.adoc
@@ -40,7 +40,7 @@ For more information on onboarding other clients, see xref:client-configuration:
 
 == Step-by-step workflow instructions
 
-.Procedure: Configure a fully-qualified domain name (FQDN) on your client
+.Procedure: Configure a fully qualified domain name (FQDN) on your client
 [role=procedure]
 . On the client, at the command prompt, show the current hostname:
 +
