--- a/modules/quickstart/pages/quickstart-install-uyuni-proxy.adoc
+++ b/modules/quickstart/pages/quickstart-install-uyuni-proxy.adoc
@@ -41,7 +41,7 @@ For more information, see xref:client-configuration:clients-opensuseleap.adoc[].
 == Register the openSUSE Leap system
 
 Begin by installing openSUSE Leap on a physical or virtual machine.
-To ensure that the proxy is accessible across the network, you must have a resolvable fully-qualified domain name (FQDN) on the openSUSE Leap system before you begin the installation.
+To ensure that the proxy is accessible across the network, you must have a resolvable fully qualified domain name (FQDN) on the openSUSE Leap system before you begin the installation.
 You can configure an FQDN with {yast} by navigating to menu:System[Network Settings > Hostname/DNS].
 
 When you have installed openSUSE Leap on the proxy and configured the FQDN, you can prepare the {productname} Server, and register the openSUSE Leap system as a client.
