--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -5,8 +5,10 @@ The Hub prepares and provides content for multiple peripheral {productname} Serv
 The data is made available for external Reporting Tools.
 
 == Architecture
-The main database is a PostgresDB in the {productname} Hub system.  It stores all the information collected from all the servers, and eventually aggregates them. 
-Every peripheral Server has its own reporting database where the information is collected for that system. In summary:
+The main database is a PostgresDB in the {productname} Hub system. 
+It stores all the information collected from all the servers, and eventually aggregates them. 
+Every peripheral Server has its own reporting database where the information is collected for that system. 
+In summary:
 
 - the DB in {productname} Hub stores, collects and eventually aggregates data coming from all the DBs of the peripheral Servers,
 - the DB in {productname} Hub stores also its own data from the systems directly connected and managed by the Hub,
@@ -49,7 +51,7 @@ The schema exports the most important tables from the main {productname} Databas
 Ready-to-use reports are provided as views, aggregating data over multiple tables.
 
 Every table gets an extra id column (`mgm_id`) specifying the {productname} server which provided the data. 
-On a single {productname} Server this column has the standard value `1` which represent "localhost". 
+On a single {productname} Server this column has the standard value `1` which represent "localhost." 
 On the {productname} Hub it is replaced with the real server id the managed server has in the hub database.
 
 Another common additional field is `synced_date`, which represent the time when the data were exported from the main {productname} Server database.
