--- a/modules/client-configuration/pages/autoinst-pxeboot.adoc
+++ b/modules/client-configuration/pages/autoinst-pxeboot.adoc
@@ -34,7 +34,7 @@ This option is selected automatically if no profile was selected after a certain
 This is a security measure to prevent from starting an autoinstallation if no human operator is there to select one of the profiles.
 
 Alternatively, the installation can start automatically from one of the profiles without manual intervention.
-This is called "unattended provisioning".
+This is called "unattended provisioning."
 
 The "bare metal" functionality is a kind of unattended provisioning based on PXE boot.
 In this scenario, the bootloader file only registers the client at the {productname} Server and does not start the installation.
