--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -60,7 +60,7 @@ Complete the setup process with with <<proc-finishing-payg-connecting>>.
 . Return to {payg} connection data [guimenu]``Details`` page. 
     The updated connection status is displayed on the top section named [guimenu]``Information``.
 . Connection status is shown in [guimenu]``Admin > Setup Wizard > Pay-as-you-go`` screen too.
-. If the authentication data for the instance are correct, the column [guimenu]``Status`` shows "Credentials successfully updated".
+. If the authentication data for the instance are correct, the column [guimenu]``Status`` shows "Credentials successfully updated."
 
 [IMPORTANT]
 ====
