--- a/modules/administration/pages/patch-management.adoc
+++ b/modules/administration/pages/patch-management.adoc
@@ -12,8 +12,8 @@ SUSE has introduced a new mechanism (2021) called "retracted patches" to revoke 
 
 [IMPORTANT]
 ====
-A patch is "retracted", when its advisory status attribute is set to "retracted".
-A package is "retracted", when it belongs to a "retracted" patch.
+A patch is "retracted", when its advisory status attribute is set to "retracted."
+A package is "retracted," when it belongs to a "retracted" patch.
 ====
 
 A retracted patch or package cannot be installed on systems with {productname}. The only way to install a retracted package, is to do it manually with [literal]``zypper install`` and specifying the exact package version.
