--- a/modules/client-configuration/pages/autoinst-profiles.adoc
+++ b/modules/client-configuration/pages/autoinst-profiles.adoc
@@ -4,10 +4,10 @@
 An autoinstallation profile determines how the operating system will be installed.
 For example, you can specify additional kernel parameters to be passed to the installer.
 
-The most important part of the profile is the "autoinstallation file".
+The most important part of the profile is the "autoinstallation file."
 When you perform an installation manually, you must provide information to the installer, such as partitioning and networking information and user details.
 The autoinstallation file is a method of providing this information in a scripted form.
-This type of file is sometimes also referred to as an "answers file".
+This type of file is sometimes also referred to as an "answers file."
 
 Within {productname}, you can use two different types of profiles, depending on the operating system of the clients you want to install:
 
@@ -106,7 +106,7 @@ Alternatively, navigate to menu:Systems[System List], select the client you want
 
 An {ay} profile consists of a [guimenu]``Label`` that identifies the profile, an [guimenu]``Autoinstall Tree`` that points to an autoinstallable distribution, various options, and, most importantly, an {ay} installation file.
 
-The {ay} installation file is an XML file that give directions to the {ay} installer. {ay} calls it a "control file".
+The {ay} installation file is an XML file that give directions to the {ay} installer. {ay} calls it a "control file."
 For the full syntax of {ay} installation files, see https://doc.opensuse.org/projects/autoyast/#cha-configuration-installation-options.
 
 {suse} provides templates of {ay} installation files that you can use as a starting point for your own custom files.
