--- a/modules/administration/pages/patch-management.adoc
+++ b/modules/administration/pages/patch-management.adoc
@@ -12,7 +12,7 @@ SUSE has introduced a new mechanism (2021) called "retracted patches" to revoke 
 
 [IMPORTANT]
 ====
-A patch is "retracted", when its advisory status attribute is set to "retracted."
+A patch is "retracted," when its advisory status attribute is set to "retracted."
 A package is "retracted," when it belongs to a "retracted" patch.
 ====
 
