--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -78,7 +78,7 @@ For more information, see xref:administration:tshoot-registertradrhel.adoc[].
 ====
 
 
-Before you start with creating a software repository with the {webui} ensure that needed extra metadata is available.
+A pre requirement is, that you have a valid repository. Please check before you start adding a software repository to {productname} with the {webui},  that needed metadata are available. 
 Tools such as [command]``createrepo`` and [command]``reprepro`` are useful in this regard.
 [command]``mgr-push`` can help with pushing a single RPM into a channel without creating a repository.
 For more information, see the  man pages for [literal]``createrepo_c`` and [literal]``reprepro``.
