--- a/modules/installation-and-upgrade/pages/install-proxy.adoc
+++ b/modules/installation-and-upgrade/pages/install-proxy.adoc
@@ -13,8 +13,8 @@ In this section, we use a KVM and a virtual machine manager as a sandbox for the
 Use these settings to create a new virtual machine with [command]``virt-manager`` (replace [literal]``<version>`` with the actual version string):
 
 [cols="1,1", options="header"]
+.KVM Settings for SLES
 |===
-| KVM Settings for SLES
 | Installation Method: | Local install media (ISO image or CDROM)
 | OS:                  | Linux
 | Version:             |``SLE-``[literal]``<version>````-Server-x86_64-GM-DVD1.iso``
